more basic spacing issues

--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@
 #projects{
     font-family: "Bebas Neue";
     font-size: 140%;
-    margin-left: 3%;
+    margin-left: 15%;
     margin-top: 100px;
 }
 
@@ -54,7 +54,7 @@
     text-align: center;
     display: flex;
     font-family: "Arvo";
-    margin-left: 29%;
+    margin-left: 18%;
 }
 
 .card{
@@ -69,13 +69,13 @@
 #skills{
     font-family: "Bebas Neue";
     font-size: 140%;
-    margin-left: 3%;
+    margin-left: 15%;
     margin-top: 100px;
 }
 
 #skillsecs{
     display: flex;
-    margin-left: 20%;
+    margin-left: 9%;
 }
 
 .sec{
@@ -85,7 +85,7 @@
 }
 
 #hobbies{
-    margin-left: 3%;
+    margin-left: 15%;
     font-family: "Bebas Neue";
     font-size: 140%;
     margin-top: 100px;
@@ -95,6 +95,7 @@
 #footer{
     text-align: center;
     font-family: "arvo";
+    margin-top: 100px;
     color: #838383;
 
 }
